[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/DowCorporate-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Yu-Gi-Oh! ITC Stone Serif LT Italic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://IMAGENS_ICONES/back2.png" type="Texture" id=3]
[ext_resource path="res://IMAGENS_ICONES/FAV/FAV0.png" type="Texture" id=4]
[ext_resource path="res://IMAGENS_ICONES/DECKS/Sample_deck.png" type="Texture" id=5]
[ext_resource path="res://SCENE/DeckHolder.gd" type="Script" id=6]
[ext_resource path="res://IMAGENS_ICONES/DECKS/Duplicate200x200.png" type="Texture" id=7]
[ext_resource path="res://SCENE/DECK_VIEWER.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 90
extra_spacing_top = 15
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=5]
color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[node name="MY_DECKS" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="TopMenu" type="HBoxContainer" parent="."]
margin_right = 1929.0
margin_bottom = 206.0
rect_min_size = Vector2( 1920, 0 )

[node name="BackButton" type="Button" parent="TopMenu"]
margin_right = 212.0
margin_bottom = 206.0
hint_tooltip = "Back"
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="VBC_Icon" type="VBoxContainer" parent="TopMenu"]
margin_left = 216.0
margin_right = 288.0
margin_bottom = 206.0

[node name="FAV_TIER" type="TextureButton" parent="TopMenu/VBC_Icon"]
margin_right = 72.0
margin_bottom = 130.0
texture_normal = ExtResource( 4 )
stretch_mode = 3

[node name="DECK_TYPE" type="TextureButton" parent="TopMenu/VBC_Icon"]
margin_top = 134.0
margin_right = 72.0
margin_bottom = 198.0
texture_normal = ExtResource( 5 )

[node name="VBC_Texts" type="VBoxContainer" parent="TopMenu"]
margin_left = 292.0
margin_right = 1713.0
margin_bottom = 206.0
rect_min_size = Vector2( 1420, 0 )
size_flags_horizontal = 7

[node name="DeckTitle" type="TextEdit" parent="TopMenu/VBC_Texts"]
margin_right = 1421.0
margin_bottom = 125.0
rect_min_size = Vector2( 1400, 125 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "DECK'S TITLE"

[node name="DeckComment" type="TextEdit" parent="TopMenu/VBC_Texts"]
margin_top = 129.0
margin_right = 1421.0
margin_bottom = 204.0
rect_min_size = Vector2( 1400, 75 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Deck's comment"

[node name="CopyButton" type="Button" parent="TopMenu"]
margin_left = 1717.0
margin_right = 1929.0
margin_bottom = 206.0
hint_tooltip = "Duplicate Deck"
icon = ExtResource( 7 )
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 210.0
margin_right = 1929.0
margin_bottom = 702.429
rect_min_size = Vector2( 1920, 492.429 )
script = ExtResource( 6 )

[node name="VBC_SkillCard" type="GridContainer" parent="HBoxContainer"]
margin_right = 338.82
margin_bottom = 492.747
rect_min_size = Vector2( 338.82, 492.747 )

[node name="VBC_MainDeck" type="GridContainer" parent="HBoxContainer"]
margin_left = 342.0
margin_right = 1471.4
margin_bottom = 492.0
rect_min_size = Vector2( 1129.4, 0 )
columns = 10

[node name="VBC_ExtraDeck" type="GridContainer" parent="HBoxContainer"]
margin_left = 1475.0
margin_right = 1700.8
margin_bottom = 492.0
rect_min_size = Vector2( 225.8, 0 )
columns = 2

[node name="VBC_SideDeck" type="GridContainer" parent="HBoxContainer"]
margin_left = 1704.0
margin_right = 1929.8
margin_bottom = 492.0
rect_min_size = Vector2( 225.8, 0 )
columns = 2
